--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,18 @@ body{
   margin: auto;
   padding: 0 20px;
 }
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background:#1e1e2f;  
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
